<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/editTextBill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/bill"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/how_was_the_service"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextBill"

        />
    <RadioGroup
        android:id="@+id/tip_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView1"
        android:checkedButton="@id/radioBtnAmazing"
        android:padding="16dp"
        >
        <!-- All radio buttons are here-->
        <RadioButton
            android:id="@+id/radioBtnAmazing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amazing_20"
            />

        <RadioButton
            android:id="@+id/radioBtnGood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_15"
            />

        <RadioButton
            android:id="@+id/radioBtnOkay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/okay_10"
            />
    </RadioGroup>
    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchRoundUpTip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tip_options"
        android:text="@string/round_up_tip"
        />
    <Button
        android:id="@+id/buttonCalculateTip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/switchRoundUpTip"
        android:layout_margin="16dp"
        android:text="@string/calculate_tip"
        />

</androidx.constraintlayout.widget.ConstraintLayout>